# kinic-wiki

./: .gitignore  AGENTS.md  Cargo.toml  FS_FIRST_CONTRACT.md  FS_FIRST_PLAN.md  LLM_WIKI_PLAN.md  MARKETPLACE_PLAN.md  README.md  VFS_DEPLOYED_CANISTER_BENCHMARKS.md  WIKI_CANONICALITY.md  icp.yaml  obsidian_plugin_plan.md
.agents/skills/: VENDOR_PLAN.md
.github/workflows/: ci.yml  npm-publish.yml  release-cli.yml
.local/: check.sh
crates/ic_sqlite_vfs_probe/: Cargo.toml
crates/ic_sqlite_vfs_probe/src/: canister.rs  lib.rs
crates/vfs_canister/: Cargo.toml  build.rs  vfs.did
crates/vfs_cli_app/: Cargo.toml
crates/vfs_cli_core/: Cargo.toml
crates/vfs_client/: Cargo.toml
crates/vfs_runtime/: Cargo.toml
crates/vfs_runtime/migrations/index_db/: 011_to_latest.sql  021_pending_operation_status.sql  022_credit_units.sql  023_storage_billing.sql  024_direct_cycles.sql  026_to_latest.sql  fresh_index_schema.sql
crates/vfs_runtime/src/: lib.rs  smt_policy.rs  sqlite.rs
crates/vfs_runtime/tests/: database_service.rs  database_service_pbt.rs  database_service_pbt_ext.rs
crates/vfs_store/: Cargo.toml
crates/vfs_store/migrations/: 003_wikilink_alias_links.sql  004_rebuild_links_after_code_filter.sql  005_okf_metadata.sql  005_seed_evidence_sources_root.sql  005_seed_raw_sources_root.sql  006_okf_metadata.sql  fresh_fs_schema.sql
crates/vfs_store/src/: fs_helpers.rs  fs_links.rs  fs_search.rs  fs_search_bench.rs  fs_store.rs  lib.rs  schema.rs  sqlite.rs
crates/vfs_store/tests/: fs_store_basic.rs  fs_store_pbt.rs  fs_store_scale.rs  fs_store_sync.rs  fs_store_vfs.rs
crates/wiki_canister/: Cargo.toml  wiki.did
crates/wiki_canister/src/: lib.rs  tests.rs  tests_sync_contract.rs
crates/wiki_cli/: Cargo.toml
crates/wiki_domain/: Cargo.toml
crates/wiki_domain/src/: lib.rs
crates/wiki_http_adapter/: Cargo.toml
crates/wiki_http_adapter/src/: lib.rs  main.rs  routes.rs
crates/wiki_http_adapter/tests/: http_adapter.rs
crates/wiki_store/: Cargo.toml
crates/wiki_types/: Cargo.toml
docs/: AGENT_MEMORY_API.md  AGENT_TOOL_CALLING.md  CLI.md  Context Pack.md  DB_LIFECYCLE.md  MCP Memory.md  PUBLIC_SMOKE.md  QUICKSTART_SKILL_KB.md  RELEASE.md  SKILL_REGISTRY.md  STORE_API.md  STORE_RECALL_MCP.md  mcp.md  payment.md
docs/archive/: idea.md
docs/internal/: DEPENDENCY_FORKS.md  IDEA_TO_DECISION_WIKI.md  KINIC_WIKI_OPERATIONS.md  LLM_WIKI_STRUCTURE.md  WIKI_BROWSER_PLAN.md  WIKI_CANONICALITY.md
docs/migration/: ic-sqlite-vfs-2-plan.md
docs/validation/: VFS_CORRECTNESS_CHECKLIST.md  VFS_DEPLOYED_CANISTER_BENCHMARKS.md
examples/skill-kb/: README.md
extensions/wiki-clipper/: .gitignore  README.md  USAGE.md  manifest.json  package-lock.json  package.json  pnpm-lock.yaml
fixtures/beam/: beam_evidence_sample.json  beam_sample.json
fixtures/mirror_spec/: pages.json  system_pages.json
mobile/ios/: README.md  project.yml
npm/kinic-vfs-cli/: README.md  package.json
plugins/claude-code/: README.md
plugins/codex/: README.md
plugins/hermes/: README.md  __init__.py  plugin.yaml  pyproject.toml
plugins/kinic-wiki/: README.md  candid.test.ts  candid.ts  client.ts  esbuild.config.mjs  eslint.config.mjs  frontmatter.ts  links.ts  main.ts  manifest.json  mirror.test.ts  mirror.ts  package-lock.json  package.json  settings.ts  styles.css  sync.test.ts  sync.ts  sync_logic.ts  tsconfig.json  types.ts
pocketic-tests/tests/: ic-sqlite-vfs-probe.test.mjs
scripts/: build-vfs-canister.sh  build-wiki-canister.sh  candid-subset-check.mjs  check-build-vfs-canister-guard.mjs  check-mainnet-deploy-wiki.mjs  check-regression-groups.mjs  demo_skill_kb.sh  guard_kinic_vfs_cli_npm_publish.sh  install-codex-skill-recorder.sh  kinic_vfs_cli_release_version.sh  run_speca_codex.sh  setup-wikibrowser-ii-e2e.sh  wasi-env.sh
scripts/bench/: run_beam_bench.sh  run_canister_vfs_fresh_compare.sh  run_canister_vfs_latency.sh  run_canister_vfs_workload.sh  (+4 more)
skill-registry-web/: README.md  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
wikibrowser/: DESIGN.md  README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  wrangler.jsonc
(+566 files in other folders)
