[workspace]
members = [
    "crates/vfs_cli_app",
    "crates/vfs_cli_core",
    "crates/vfs_client",
    "crates/vfs_runtime",
    "crates/vfs_types",
    "crates/wiki_domain",
    "crates/ic_sqlite_vfs_probe",
    "crates/vfs_canister",
    "crates/vfs_store",
]
resolver = "2"

[workspace.dependencies]
# See docs/internal/DEPENDENCY_FORKS.md for fork scope and update policy.
ic-sqlite-vfs = { git = "https://github.com/humandebri/ic-sqlite-vfs", rev = "a3a454ff749c5be59b00725ced7ede5ac200496f", default-features = false }
