[package]
name = "ic-sqlite-vfs-probe"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10.26"
ic-cdk = "0.20.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ic-sqlite-vfs = { workspace = true, features = ["sqlite-bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-sqlite-vfs = { workspace = true, features = ["sqlite-precompiled"] }

[dev-dependencies]
proptest = "1.11.0"
