[package]
name = "vfs-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
candid = "0.10.26"
serde_json = "1.0.145"
sha2 = "0.10.9"
vfs_types = { package = "kinic-vfs-types", version = "0.1.0", path = "../vfs_types" }
vfs-store = { path = "../vfs_store" }
wiki_domain = { package = "kinic-wiki-domain", version = "0.1.0", path = "../wiki_domain" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled", "hooks"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-sqlite-vfs = { version = "0.2.1", default-features = false, features = ["sqlite-precompiled"] }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.23.0"
