[package]
name = "vfs-store"
version = "0.1.0"
edition = "2024"

[features]
bench-search-stages = []

[dependencies]
hex = "0.4.3"
pulldown-cmark = "0.13.0"
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["formatting", "macros"] }
vfs_types = { package = "kinic-vfs-types", version = "0.1.0", path = "../vfs_types" }
wiki_domain = { package = "kinic-wiki-domain", version = "0.1.0", path = "../wiki_domain" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ic-sqlite-vfs = { version = "0.2.1", default-features = false, features = ["sqlite-precompiled"] }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.23.0"
vfs_types = { package = "kinic-vfs-types", version = "0.1.0", path = "../vfs_types" }
