[package]
name = "wiki-http-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "net"] }
wiki-runtime = { path = "../wiki_runtime" }
wiki-types = { path = "../wiki_types" }

[dev-dependencies]
serde_json = "1.0.145"
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }
